force-app/main/default/objects/vlocity_ins__AccountRegulatoryAction__c/fields/vlocity_ins__ActionDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>