force-app/main/default/objects/vlocity_ins__AccountRegulatoryAction__c/fields/vlocity_ins__InceptionCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InceptionCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inception Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>