force-app/main/default/objects/vlocity_ins__AccountRegulatoryAction__c/fields/vlocity_ins__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PeriodStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>